them tinh nang"

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="links-container">
                     <ul class="links">
                       <li>
-                        <a href="#home" class="scroll-link">home</a>
+                        <a href="#home" class="scroll-link active">home</a>
                       </li>
                       <li>
                         <a href="#about" class="scroll-link">about</a>
@@ -67,6 +67,6 @@
     <a href="#home" class="top-link scroll-link">
         <i class="fas fa-arrow-up"></i>
     </a>
-    <script src="./inde2.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
